--- a/index.html
+++ b/index.html
@@ -10,27 +10,36 @@
 </head>
 
 <body>
+    <input class="toggle_menu" id="toggle_menu" type="checkbox">
     <header class="header">
-        <div class="container">
-            <div class="heading_contents">
-                <a class="header_logo" href="https://lenceriafylo.com/">
-                    <img src="./images/logo.svg" alt="logo">
-                </a>
-                <img menu_icon src="./images/icon-hamburger.svg" alt="icon-hamburger">
-                <input class="toggle_menu" type="checkbox">
-                <nav class="header_navigation">
-                    <ul class="header_navigation--lists">
-                        <li class="about_link"><a href="/about">About</a></li>
-                        <li class="careers_link"><a href="/careers">Careers</a></li>
-                        <li class="event_link"><a href="/event">Event</a></li>
-                        <li class="products_link"><a href="/products">Products</a></li>
-                        <li class="support_link"><a href="/support">Support</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="heading_page">
-                <h1 class="title">Immersive experiences that deliver</h1>
-            </div>
+        <div class="heading_contents">
+            <a class="header_logo" href="https://lenceriafylo.com/">
+                <img class="logo" src="./images/logo.svg" alt="logo">
+            </a>
+            <label for="toggle_menu">
+                    <img class="open_menu" src="./images/icon-hamburger.svg" alt="icon-hamburger">
+                </label>
+            <nav class="header_navigation">
+                <div>
+                    <a href="https://lenceriafylo.com/">
+                        <img src="./images/logo.svg" alt="logo">
+                    </a>
+                    <label for="toggle_menu">
+                            <img class="close_menu" src="./images/icon-close.svg" alt="icon-close">
+                        </label>
+                </div>
+                <ul class="header_navigation--lists">
+                    <li class="about_link"><a href="/about">About</a></li>
+                    <li class="careers_link"><a href="/careers">Careers</a></li>
+                    <li class="event_link"><a href="/event">Event</a></li>
+                    <li class="products_link"><a href="/products">Products</a></li>
+                    <li class="support_link"><a href="/support">Support</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="heading_page">
+            <h1 class="title">Immersive experiences that deliver</h1>
+        </div>
         </div>
     </header>
     <main class="main">
