--- a/index.html
+++ b/index.html
@@ -12,39 +12,40 @@
 <body>
     <input class="toggle_menu" id="toggle_menu" type="checkbox">
     <header class="header">
-        <div class="heading_contents">
-            <a class="header_logo" href="https://lenceriafylo.com/">
-                <img class="logo" src="./images/logo.svg" alt="logo">
-            </a>
-            <label for="toggle_menu">
-                    <img class="open_menu" src="./images/icon-hamburger.svg" alt="icon-hamburger">
-                </label>
-            <nav class="header_navigation">
-                <div>
-                    <a href="https://lenceriafylo.com/">
-                        <img src="./images/logo.svg" alt="logo">
-                    </a>
-                    <label for="toggle_menu">
-                            <img class="close_menu" src="./images/icon-close.svg" alt="icon-close">
-                        </label>
-                </div>
-                <ul class="header_navigation--lists">
-                    <li class="about_link"><a href="/about">About</a></li>
-                    <li class="careers_link"><a href="/careers">Careers</a></li>
-                    <li class="event_link"><a href="/event">Event</a></li>
-                    <li class="products_link"><a href="/products">Products</a></li>
-                    <li class="support_link"><a href="/support">Support</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="heading_page">
-            <h1 class="title">Immersive experiences that deliver</h1>
-        </div>
+        <div class="container">
+            <div class="heading_contents">
+                <a class="header_logo" href="https://loopstudio.dev/">
+                    <img class="logo" src="./images/logo.svg" alt="logo">
+                </a>
+                <label for="toggle_menu">
+                        <img class="open_menu" src="./images/icon-hamburger.svg" alt="icon-hamburger">
+                    </label>
+                <nav class="header_navigation">
+                    <div>
+                        <a href="https://lenceriafylo.com/">
+                            <img src="./images/logo.svg" alt="logo">
+                        </a>
+                        <label for="toggle_menu">
+                                <img class="close_menu" src="./images/icon-close.svg" alt="icon-close">
+                            </label>
+                    </div>
+                    <ul class="header_navigation--lists">
+                        <li class="about_link"><a href="/about">About</a></li>
+                        <li class="careers_link"><a href="/careers">Careers</a></li>
+                        <li class="event_link"><a href="/event">Event</a></li>
+                        <li class="products_link"><a href="/products">Products</a></li>
+                        <li class="support_link"><a href="/support">Support</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="heading_page">
+                <h1 class="title">Immersive experiences that deliver</h1>
+            </div>
         </div>
     </header>
     <main class="main">
         <section class="interactive_leader--section">
-            <img class="image" src="" alt="">
+            <img class="image" src="./images/mobile/image-interactive.jpg" alt="favicon">
             <div class="text_container">
                 <h2 class="title">The leader in interactive VR</h2>
                 <p class="parg">
@@ -84,7 +85,9 @@
     </main>
     <footer class="footer">
         <div class="footer_menu_container">
-            <img class="footer_logo" src="./images/logo.svg" alt="logo">
+            <a class="footer_logo" href="https://loopstudio.dev/">
+                <img src="./images/logo.svg" alt="logo">
+            </a>
             <nav class="footer_navigation">
                 <ul class="navigation_lists">
                     <li><a class="about" href="/about">About</a></li>
