starting to style the footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </header>
     <main class="main">
         <section class="interactive_leader--section">
+
             <img class="image" src="./images/mobile/image-interactive.jpg" alt="favicon">
             <div class="text_container">
                 <h2 class="title">The leader in interactive VR</h2>
@@ -84,7 +85,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer_menu_container">
+        <div class="footer_menu--container">
             <a class="footer_logo" href="https://loopstudio.dev/">
                 <img src="./images/logo.svg" alt="logo">
             </a>
